--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   },
   "dependencies": {
     "dom-to-image": "2.6.0",
-    "firebase": "^5.5.3",
+    "firebase": "5.5.3",
     "html2canvas": "1.0.0-alpha.12",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
+    "prop-types": "15.6.2",
+    "react": "16.4.1",
     "react-dom": "^16.4.1",
     "reactdom": "2.0.0"
   }
